# MIPT_2_homework

./: README.md
13.11/: a.out  exec  exec.c  main.c
BIZZBUZZ_09/: file.c  files.c  main.c  prog.c
Cheking files/: main.c
Common_libs/: CMakeLists.txt  safe_ops.h
Directories/: a.out  inotify.c  main.c  reading.c
Fcntl/: fcntl.c  main.c
Grep/: first.c
RISC-5/: a.out  translation.cpp  translation.hpp  translator.cpp
Res_copy/: Makefile  ResCop.h  change  change.c  log.txt  main  main.c  safe_ops.c
Res_copy/INFO/: log.txt  pid.txt
Res_copy/Libraries/: ResCop.c  safe_ops.h
Res_copy/STOP_F/: change  change.c
Stack/: CMakeLists.txt  README.md  a.out  extra.c  file  main.c  stack.h
Stack/Stack/: CMakeLists.txt  stack.c  stack.h
grep/: CMakeLists.txt  first.c  safe_ops.h  test.c  test1
grep/Common_libs/: CMakeLists.txt  safe_ops.h
